--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -63,6 +63,12 @@
                                     <action selector="doUITest:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LaV-WQ-bah"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bad password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6n5-ky-dNm">
+                                <rect key="frame" x="154" y="296" width="107.33333333333331" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <color key="highlightedColor" red="1" green="0.12610571069128329" blue="0.11841207851568103" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -85,6 +91,7 @@
                             <constraint firstItem="Eyi-cc-m5W" firstAttribute="top" secondItem="XS4-av-TcI" secondAttribute="bottom" constant="32" id="MGe-jL-IVf">
                                 <variation key="heightClass=compact-widthClass=compact" constant="20"/>
                             </constraint>
+                            <constraint firstItem="6n5-ky-dNm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NzF-uy-XwO"/>
                             <constraint firstItem="Eyi-cc-m5W" firstAttribute="centerX" secondItem="XS4-av-TcI" secondAttribute="centerX" id="Tmj-Hk-X9X"/>
                             <constraint firstItem="VB9-O7-z6v" firstAttribute="height" secondItem="XS4-av-TcI" secondAttribute="height" id="To7-5V-xvt"/>
                             <constraint firstItem="Lk8-TG-cp1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Wkv-NU-iR9"/>
@@ -93,6 +100,7 @@
                                 <variation key="heightClass=regular-widthClass=compact" constant="40"/>
                             </constraint>
                             <constraint firstItem="vuh-fk-EpA" firstAttribute="centerY" secondItem="Lk8-TG-cp1" secondAttribute="centerY" id="iKK-NL-clf"/>
+                            <constraint firstItem="Lk8-TG-cp1" firstAttribute="top" secondItem="6n5-ky-dNm" secondAttribute="bottom" constant="10" id="iwp-qn-HD9"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Eyi-cc-m5W" secondAttribute="bottom" constant="235" id="mPK-xX-8bT"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="i0K-ZA-Jt7" secondAttribute="bottom" constant="20" id="qgH-Oh-rFe"/>
                             <constraint firstItem="XS4-av-TcI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vWI-hP-siY"/>
@@ -106,7 +114,6 @@
                                 <exclude reference="XS4-av-TcI"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="mPK-xX-8bT"/>
                                 <exclude reference="Lrb-m8-ov8"/>
                                 <exclude reference="iKK-NL-clf"/>
                                 <exclude reference="4Oe-GI-1Vn"/>
@@ -121,6 +128,7 @@
                                 <exclude reference="vWI-hP-siY"/>
                                 <exclude reference="MGe-jL-IVf"/>
                                 <exclude reference="Tmj-Hk-X9X"/>
+                                <exclude reference="mPK-xX-8bT"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact-widthClass=compact">
@@ -132,7 +140,6 @@
                                 <include reference="XS4-av-TcI"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="mPK-xX-8bT"/>
                                 <include reference="Lrb-m8-ov8"/>
                                 <include reference="iKK-NL-clf"/>
                                 <include reference="4Oe-GI-1Vn"/>
@@ -147,6 +154,7 @@
                                 <include reference="vWI-hP-siY"/>
                                 <include reference="MGe-jL-IVf"/>
                                 <include reference="Tmj-Hk-X9X"/>
+                                <include reference="mPK-xX-8bT"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact-widthClass=regular">
@@ -158,7 +166,6 @@
                                 <include reference="XS4-av-TcI"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="mPK-xX-8bT"/>
                                 <include reference="Lrb-m8-ov8"/>
                                 <include reference="iKK-NL-clf"/>
                                 <include reference="4Oe-GI-1Vn"/>
@@ -173,6 +180,7 @@
                                 <include reference="vWI-hP-siY"/>
                                 <include reference="MGe-jL-IVf"/>
                                 <include reference="Tmj-Hk-X9X"/>
+                                <include reference="mPK-xX-8bT"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -184,7 +192,6 @@
                                 <include reference="XS4-av-TcI"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="mPK-xX-8bT"/>
                                 <include reference="Lrb-m8-ov8"/>
                                 <include reference="iKK-NL-clf"/>
                                 <include reference="4Oe-GI-1Vn"/>
@@ -199,6 +206,7 @@
                                 <include reference="vWI-hP-siY"/>
                                 <include reference="MGe-jL-IVf"/>
                                 <include reference="Tmj-Hk-X9X"/>
+                                <include reference="mPK-xX-8bT"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=regular">
@@ -210,7 +218,6 @@
                                 <include reference="XS4-av-TcI"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="mPK-xX-8bT"/>
                                 <include reference="Lrb-m8-ov8"/>
                                 <include reference="iKK-NL-clf"/>
                                 <include reference="4Oe-GI-1Vn"/>
@@ -225,6 +232,7 @@
                                 <include reference="vWI-hP-siY"/>
                                 <include reference="MGe-jL-IVf"/>
                                 <include reference="Tmj-Hk-X9X"/>
+                                <include reference="mPK-xX-8bT"/>
                             </mask>
                         </variation>
                     </view>
@@ -239,7 +247,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="233" y="781"/>
+            <point key="canvasLocation" x="231.8840579710145" y="780.97826086956525"/>
         </scene>
         <!--Student Login-->
         <scene sceneID="grS-Hc-Lhf">
@@ -458,6 +466,7 @@
                                     <outlet property="endDate" destination="PP2-67-x0H" id="8Gv-Gf-4i2"/>
                                     <outlet property="sessionTitle" destination="bAu-WC-whg" id="Cvl-17-9lA"/>
                                     <outlet property="startDate" destination="oTi-bf-oJx" id="j3U-Jz-ito"/>
+                                    <segue destination="9xR-Xk-1pM" kind="show" identifier="SessionName2" id="Ooh-zO-2fT"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -470,7 +479,6 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <segue destination="ulC-Le-YF2" kind="show" identifier="TutorCreateLecture" id="Dd1-md-6Ki"/>
-                        <segue destination="9xR-Xk-1pM" kind="show" identifier="SessionName2" id="mc1-hx-aOv"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0MI-H1-xXD" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -490,7 +498,7 @@
                                 <rect key="frame" x="0.0" y="55" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jVm-rJ-pMn" id="rsn-lD-LKY">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7QZ-pj-ull">
@@ -517,7 +525,7 @@
                                 <rect key="frame" x="0.0" y="99" width="414" height="227"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hzg-lA-nWx" id="fVR-bl-0Jc">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="226.66666666666666"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="226"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="OoC-hh-A4s">
@@ -543,7 +551,7 @@
                                 <rect key="frame" x="0.0" y="326" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ysk-fL-c90" id="66M-fE-Tmw">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Simple Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPC-yj-sdy">
@@ -568,9 +576,6 @@
                             <outlet property="delegate" destination="ulC-Le-YF2" id="QxM-gd-N7D"/>
                         </connections>
                     </tableView>
-                    <connections>
-                        <segue destination="9xR-Xk-1pM" kind="show" identifier="SessionName" id="Scf-Ti-6Pw"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3G9-Jw-EK5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -961,7 +966,4 @@
         <image name="RedButton" width="100" height="100"/>
         <image name="ResetButton" width="200" height="100"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="mc1-hx-aOv"/>
-    </inferredMetricsTieBreakers>
 </document>
